--- a/index.html
+++ b/index.html
@@ -45,21 +45,107 @@
       </div>
     </header>
 
-    <section class="banner">
-      <div class="container">
-        <div class="content">
-          <h1>Hey, it's Christmas time!</h1>
-          <p>
-            Find the perfect holiday gift for everyone on your list this year,
-            no matter what’s your budget.
-          </p>
+    <div class="content-banner">
+      <div class="banner">
+        <div class="container">
+          <div class="content">
+            <h1>Hey, it's Christmas time!</h1>
+            <p>
+              Find the perfect holiday gift for everyone on your list this year,
+              no matter what’s your budget.
+            </p>
 
-          <a href="#">Explore Now</a>
-        </div>
-        <div class="content-image">
-          <img src="assets/img/Hero.svg" alt="" />
+            <a href="#">Explore Now</a>
+          </div>
+          <div class="content-image">
+            <img src="assets/img/Hero.svg" alt="" />
+          </div>
         </div>
       </div>
-    </section>
+    </div>
+
+    <main class="main-content">
+      <section id="new">
+        <div class="container">
+          <div class="about-new">
+            <div class="content-image">
+              <img src="assets/img/SantaImage.png" alt="Santa Image" />
+            </div>
+            <div class="content">
+              <h2>Santa claus is Coming</h2>
+              <p>
+                Fill your Christmas holiday with good cheer, joyful decorations,
+                and unforgettable experience. Feel free to attend our Christmas
+                event with your children and family and celebrate the most
+                anticipated winter holiday. From Christmas carols to activities
+                for adults and children, Sannta has a lot to offer.
+              </p>
+
+              <a href="#">Get Your Gift</a>
+            </div>
+          </div>
+          <div class="christmas-wish-and-party">
+            <div class="content">
+              <h2>Christmas wish and party</h2>
+              <p>
+                Fill your Christmas holiday with good cheer, joyful decorations,
+                and unforgettable experience. Feel free to attend our Christmas
+                event with your children and family and celebrate the most
+                anticipated winter holiday. From Christmas carols to activities
+                for adults and children, Sannta has a lot to offer.
+              </p>
+
+              <a href="#">Join the Party</a>
+            </div>
+            <div class="content-image">
+              <img src="assets/img/TreeImage.png" alt="Santa Image" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gift">
+        <div class="container">
+          <div class="title">
+            <h2>Gift Items</h2>
+            <p>
+              Christmas is an annual festival commemorating the birth of Jesus
+              Christ, a cultural celebration among billions of people around the
+              world.
+            </p>
+          </div>
+
+          <div class="gift-items">
+            <div class="item">
+              <img src="assets/img/icons/Hat.svg" alt="Hat Icon" />
+              <h3>Hat</h3>
+              <p>
+                Inspirational Christmas Greetings Messages for your loved ones –
+                whether you’re sending a small gift to grandma or need something
+                special to write for.
+              </p>
+            </div>
+            <div class="item">
+              <img src="assets/img/icons/Tree.svg" alt="Tree Icon" />
+              <h3>Tree</h3>
+              <p>
+                Inspirational Christmas Greetings Messages for your loved ones –
+                whether you’re sending a small gift to grandma or need something
+                special to write for.
+              </p>
+            </div>
+            <div class="item">
+              <img src="assets/img/icons/Bell.svg" alt="Bell Icon" />
+              <h3>Bell</h3>
+              <p>
+                Inspirational Christmas Greetings Messages for your loved ones –
+                whether you’re sending a small gift to grandma or need something
+                special to write for.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
