Trabalhando na parte do about, terminando o projeto

--- a/index.html
+++ b/index.html
@@ -146,6 +146,43 @@
           </div>
         </div>
       </section>
+
+      <section id="about">
+        <div class="container">
+          <div class="content-image">
+            <img src="assets/img/TreeAboutImage.png" alt="Santa Image" />
+          </div>
+          <div class="content">
+            <h2>About the live event</h2>
+            <p>
+              Fill your Christmas holiday with good cheer, joyful decorations,
+              and unforgettable experience. Feel free to attend our Christmas
+              event with your children and family and celebrate the most
+              anticipated winter holiday. From Christmas carols to activities
+              for adults and children, Sannta has a lot to offer.
+            </p>
+
+            <div class="preset-about-live">
+              <div class="item-about">
+                <img src="assets/img/icons/BeautifulDesign.svg" alt="" />
+                <h3>Beautiful Design</h3>
+                <p>
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text.
+                </p>
+              </div>
+              <div class="item-about">
+                <img src="assets/img/icons/GreatSound.svg" alt="" />
+                <h3>Great Sound</h3>
+                <p>
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
