Trablahando no formulario

--- a/index.html
+++ b/index.html
@@ -183,6 +183,30 @@
           </div>
         </div>
       </section>
+
+      <section id="join">
+        <div class="container">
+          <div class="form">
+            <h2>Join the party</h2>
+            <div class="form-content">
+              <form action="">
+                <h3>Contact Us</h3>
+                <p>Please fill this form in a decent manner.</p>
+
+                <div class="inputs">
+                  <input type="text" placeholder="Full Name" />
+                  <input type="text" placeholder="Email Address" />
+                  <input type="text" placeholder="Subject" />
+                  <button>Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="content-image">
+            <img src="assets/img/JoinTheParty.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
