--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
             <h2>Join the party</h2>
             <div class="form-content">
               <form action="">
-                <h3>Contact Us</h3>
-                <p>Please fill this form in a decent manner.</p>
+                <div class="title-form">
+                  <h3>Contact Us</h3>
+                  <p>Please fill this form in a decent manner.</p>
+                </div>
 
                 <div class="inputs">
                   <input type="text" placeholder="Full Name" />
@@ -208,5 +210,30 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="stayInTouch">
+          <h2>Stay In Touch</h2>
+          <p>Don't be a stranger and start following us :)</p>
+        </div>
+        <div class="social-midia">
+          <a href="#">
+            <img src="assets/img/icons/Facebook.png" alt="" />
+          </a>
+          <a href="#">
+            <img src="assets/img/icons/Instagram.png" alt="" />
+          </a>
+          <a href="#">
+            <img src="assets/img/icons/Discord.png" alt="" />
+          </a>
+          <a href="#">
+            <img src="assets/img/icons/Dribbble.png" alt="" />
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-bottom"></div>
+    </footer>
   </body>
 </html>
