--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
           </div>
         </div>
       </section>
+      <div class="bg-shadow"></div>
 
       <section id="about">
         <div class="container">
@@ -209,6 +210,7 @@
           </div>
         </div>
       </section>
+      <div class="bg-shadow"></div>
     </main>
 
     <footer>
