Criando a refatoração do meu código

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               no matter what’s your budget.
             </p>
 
-            <a href="#">Explore Now</a>
+            <a href="#" class="btn--santa">Explore Now</a>
           </div>
           <div class="content-image">
             <img src="assets/img/Hero.svg" alt="" />
@@ -72,8 +72,8 @@
               <img src="assets/img/SantaImage.png" alt="Santa Image" />
             </div>
             <div class="content">
-              <h2>Santa claus is Coming</h2>
-              <p>
+              <h2 class="header--title">Santa claus is Coming</h2>
+              <p class="text--content-marge">
                 Fill your Christmas holiday with good cheer, joyful decorations,
                 and unforgettable experience. Feel free to attend our Christmas
                 event with your children and family and celebrate the most
@@ -81,13 +81,13 @@
                 for adults and children, Sannta has a lot to offer.
               </p>
 
-              <a href="#">Get Your Gift</a>
+              <a href="#" class="btn--santa">Get Your Gift</a>
             </div>
           </div>
           <div class="christmas-wish-and-party">
             <div class="content">
-              <h2>Christmas wish and party</h2>
-              <p>
+              <h2 class="header--title">Christmas wish and party</h2>
+              <p class="text--content-marge">
                 Fill your Christmas holiday with good cheer, joyful decorations,
                 and unforgettable experience. Feel free to attend our Christmas
                 event with your children and family and celebrate the most
@@ -95,7 +95,7 @@
                 for adults and children, Sannta has a lot to offer.
               </p>
 
-              <a href="#">Join the Party</a>
+              <a href="#" class="btn--santa">Join the Party</a>
             </div>
             <div class="content-image">
               <img src="assets/img/TreeImage.png" alt="Santa Image" />
@@ -107,7 +107,7 @@
       <section id="gift">
         <div class="container">
           <div class="title">
-            <h2>Gift Items</h2>
+            <h2 class="header--title">Gift Items</h2>
             <p>
               Christmas is an annual festival commemorating the birth of Jesus
               Christ, a cultural celebration among billions of people around the
@@ -150,12 +150,12 @@
 
       <section id="about">
         <div class="container">
-          <div class="content-image">
+          <div class="content-image col--50">
             <img src="assets/img/TreeAboutImage.png" alt="Santa Image" />
           </div>
-          <div class="content">
-            <h2>About the live event</h2>
-            <p>
+          <div class="content col--50">
+            <h2 class="header--title">About the live event</h2>
+            <p class="text--content-marge">
               Fill your Christmas holiday with good cheer, joyful decorations,
               and unforgettable experience. Feel free to attend our Christmas
               event with your children and family and celebrate the most
@@ -188,7 +188,7 @@
       <section id="join">
         <div class="container">
           <div class="form">
-            <h2>Join the party</h2>
+            <h2 class="header--title">Join the party</h2>
             <div class="form-content">
               <form action="">
                 <div class="title-form">
