--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <section id="new">
         <div class="container">
           <div class="about-new">
-            <div class="content-image">
+            <div class="content-image col--50">
               <img src="assets/img/SantaImage.png" alt="Santa Image" />
             </div>
-            <div class="content">
+            <div class="content col--50">
               <h2 class="header--title">Santa claus is Coming</h2>
               <p class="text--content-marge">
                 Fill your Christmas holiday with good cheer, joyful decorations,
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="christmas-wish-and-party">
-            <div class="content">
+            <div class="content col--50">
               <h2 class="header--title">Christmas wish and party</h2>
               <p class="text--content-marge">
                 Fill your Christmas holiday with good cheer, joyful decorations,
@@ -97,7 +97,7 @@
 
               <a href="#" class="btn--santa">Join the Party</a>
             </div>
-            <div class="content-image">
+            <div class="content-image col--50 flex-content">
               <img src="assets/img/TreeImage.png" alt="Santa Image" />
             </div>
           </div>
