Adicionando o menu mobile

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
           <a href="#">Sign In</a>
           <a href="#" class="sign-up">Sign Up</a>
         </div>
+        <button type="button" id="openBtnMenuMobile">Menu</button>
+      </div>
+
+      <div class="" id="mobileMenuDisplay">
+        <ul>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Gifts</a></li>
+          <li><a href="#">Cards</a></li>
+          <li>
+            <div>
+              <a href="#">Sign In</a>
+              <a href="#" class="sign-up">Sign Up</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -237,5 +253,7 @@
 
       <div class="footer-bottom"></div>
     </footer>
+
+    <script src="assets/js/santa.js"></script>
   </body>
 </html>
